--- a/scintil/.classpath
+++ b/scintil/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="lib" path="lib/jlfgr-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/scintil-icons.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/editorlib"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.0.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
